--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodules/biomcmc-lib"]
 	path = submodules/biomcmc-lib
 	url = https://github.com/quadram-institute-bioscience/biomcmc-lib.git
+[submodule "submodules/WFA"]
+	path = submodules/WFA
+	url = git@github.com:leomrtns/WFA.git
