--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 EXTRA_DIST = recipe 
 ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = @BIOMCMCLIB@ WFA src 
-install installdirs: SUBDIRS = WFA src # do not install biomcmc-lib
+SUBDIRS = @BIOMCMCLIB@ submodules/WFA src 
+install installdirs: SUBDIRS = submodules/WFA src # do not install biomcmc-lib
