--- a/Makefile.in
+++ b/Makefile.in
@@ -344,7 +344,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 EXTRA_DIST = recipe 
 ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = @BIOMCMCLIB@ WFA src 
+SUBDIRS = @BIOMCMCLIB@ submodules/WFA src 
 all: all-recursive
 
 .SUFFIXES:
@@ -810,7 +810,7 @@ uninstall-am:
 
 .PRECIOUS: Makefile
 
-install installdirs: SUBDIRS = WFA src # do not install biomcmc-lib
+install installdirs: SUBDIRS = submodules/WFA src # do not install biomcmc-lib
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
