--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,12 +4,12 @@ AM_CPPFLAGS = $(GTKDEPS_CFLAGS) -I$(top_srcdir)/submodules/WFA -I$(top_srcdir)/@
 AM_CFLAGS = @AM_CFLAGS@ @OPENMP_CFLAGS@ @CHECK_CFLAGS@
 LDADD = $(GTKDEPS_LIBS) @CHECK_LIBS@  $(top_builddir)/submodules/WFA/libwfa.la $(top_builddir)/@BIOMCMCLIB@/lib/libbiomcmc_static.la @ZLIB_LIBS@  $(AM_LDFLAGS)
 
-bin_PROGRAMS = uvaia_align  uvaia_search_u uvaia_search_a
-uvaia_align_SOURCES = align.c kseq.h
-uvaia_align_LDADD = $(LDADD)
+bin_PROGRAMS = uvaialign  uvaia_search_u uvaia
+uvaialign_SOURCES = align.c kseq.h
+uvaialign_LDADD = $(LDADD)
 
 uvaia_search_u_SOURCES = search_u.c kseq.h
 uvaia_search_u_LDADD = $(LDADD)
 
-uvaia_search_a_SOURCES = search_a.c utils.c utils.h kseq.h
-uvaia_search_a_LDADD = $(LDADD)
+uvaia_SOURCES = uvaia.c utils.c utils.h kseq.h
+uvaia_LDADD = $(LDADD)
