skips AC_CONFIG_SUBDIR using single configure.ac

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 EXTRA_DIST = recipe 
 ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = @BIOMCMCLIB@ submodules/WFA src 
-install installdirs: SUBDIRS = submodules/WFA src # do not install biomcmc-lib
+#install installdirs: SUBDIRS = submodules/WFA src # do not install biomcmc-lib
