--- a/src/config.h.in
+++ b/src/config.h.in
@@ -55,6 +55,9 @@
 /* Define to 1 to support Bit Manipulation Instruction Set 2 */
 #undef HAVE_BMI2
 
+/* bz2 compression library not found */
+#undef HAVE_BZIP2
+
 /* Define to 1 if you have the <dlfcn.h> header file. */
 #undef HAVE_DLFCN_H
 
@@ -66,6 +69,12 @@
 
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
+
+/* Define to 1 if you have the `bz2' library (-lbz2). */
+#undef HAVE_LIBBZ2
+
+/* xz compression library not found */
+#undef HAVE_LZMA
 
 /* Define to 1 if you have the <memory.h> header file. */
 #undef HAVE_MEMORY_H
@@ -132,6 +141,9 @@
 
 /* Define to 1 to support eXtended Operations Extensions */
 #undef HAVE_XOP
+
+/* gz compression library not found */
+#undef HAVE_ZLIB
 
 /* Define to the sub-directory where libtool stores uninstalled libraries. */
 #undef LT_OBJDIR
