--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/quadram-institute-bioscience/biomcmc-lib.git
 [submodule "submodules/WFA"]
 	path = submodules/WFA
-	url = git@github.com:leomrtns/WFA.git
+	url = https://github.com/leomrtns/WFA.git
