--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,12 +1,12 @@
-{% set version="1.1.0" %}
-{% set revision="17ff24ffd7a279dd6dd62a0fdee13cd3d1abfc64" %}
+{% set version="1.0.0" %}
+{% set revision="d5db818f817f248d5bff8ca32b5d131054ff9edb" %}
 
 package:
-  name: super_distance 
+  name: uvaia 
   version: {{ version }}
 
 source:
-  git_url: https://github.com/quadram-institute-bioscience/super_distance.git
+  git_url: https://github.com/quadram-institute-bioscience/uvaia.git
   git_rev: {{ revision }}
   md5: unused
 
@@ -18,25 +18,36 @@ requirements:
   build:
     - {{ compiler('c') }}
     - automake
+    - libtool
+    - pkg-config
     - make
     - check
+    - zlib
+    - xz
+    - bzip2
   host:
     - check
     - zlib
+    - xz
+    - bzip2
   run:
     - zlib
+    - xz
+    - bzip2
 
 test:
   commands:
-    - super_distance -h 
+    - uvaia -h 
 
 about:
-  home: https://github.com/quadram-institute-bioscience/super_distance
+  home: https://github.com/quadram-institute-bioscience/uvaia
   license: 'GPLv3'
-  summary: 'Supertree method with distances'
+  license_file: LICENSE 
+  summary: 'Reference-based alignment and sequence database search'
 
 extra:
   identifiers:
-    - biotools:super_distance
+    - biotools:uvaia
   skip-lints:
     - uses_git_url
+    - uses_vcs_url
