making travis happy

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,12 @@ before_install:
   - export OMP_NUM_THREADS=4 
   - sudo apt-get update
   - sudo apt-get install -y check 
-  - sudo apt-get install -y autotools-dev 
-install: 
-  - autoreconf
+  - sudo apt-get install -y pkg-config libtool automake  autotools-dev 
+  - sudo apt-get install -y zlib1g-dev libomp-dev libbz2-dev liblzma-dev 
 script:
-  - "mkdir build; cd build; ../configure && make && make check"
+  - "sh ./autogen.sh; mkdir build; cd build; ../configure && make && make check"
 
 branches:
   only:
   - master
-
-# the Default script is "./configure && make && make test"
 
