--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -89,7 +89,7 @@ POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
 bin_PROGRAMS = uvaialign$(EXEEXT) uvaia_search_u$(EXEEXT) \
-	uvaia$(EXEEXT)
+	uvaia$(EXEEXT) uvaiaclust$(EXEEXT)
 subdir = src
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/libtool.m4 \
@@ -123,6 +123,10 @@ am__v_lt_1 =
 am_uvaia_search_u_OBJECTS = search_u.$(OBJEXT)
 uvaia_search_u_OBJECTS = $(am_uvaia_search_u_OBJECTS)
 uvaia_search_u_DEPENDENCIES = $(am__DEPENDENCIES_2)
+am_uvaiaclust_OBJECTS = cluster.$(OBJEXT) utils.$(OBJEXT) \
+	fastaseq.$(OBJEXT)
+uvaiaclust_OBJECTS = $(am_uvaiaclust_OBJECTS)
+uvaiaclust_DEPENDENCIES = $(am__DEPENDENCIES_2)
 am_uvaialign_OBJECTS = align.$(OBJEXT)
 uvaialign_OBJECTS = $(am_uvaialign_OBJECTS)
 uvaialign_DEPENDENCIES = $(am__DEPENDENCIES_2)
@@ -161,9 +165,9 @@ am__v_CCLD_ = $(am__v_CCLD_@AM_DEFAULT_V@)
 am__v_CCLD_0 = @echo "  CCLD    " $@;
 am__v_CCLD_1 = 
 SOURCES = $(uvaia_SOURCES) $(uvaia_search_u_SOURCES) \
-	$(uvaialign_SOURCES)
+	$(uvaiaclust_SOURCES) $(uvaialign_SOURCES)
 DIST_SOURCES = $(uvaia_SOURCES) $(uvaia_search_u_SOURCES) \
-	$(uvaialign_SOURCES)
+	$(uvaiaclust_SOURCES) $(uvaialign_SOURCES)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -334,8 +338,10 @@ uvaialign_SOURCES = align.c kseq.h
 uvaialign_LDADD = $(LDADD)
 uvaia_search_u_SOURCES = search_u.c kseq.h
 uvaia_search_u_LDADD = $(LDADD)
-uvaia_SOURCES = uvaia.c utils.c utils.h kseq.h
+uvaia_SOURCES = uvaia.c utils.c utils.h
 uvaia_LDADD = $(LDADD)
+uvaiaclust_SOURCES = cluster.c utils.c utils.h fastaseq.h fastaseq.c
+uvaiaclust_LDADD = $(LDADD)
 all: all-am
 
 .SUFFIXES:
@@ -349,9 +355,9 @@ $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am  $(am__confi
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu src/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign src/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu src/Makefile
+	  $(AUTOMAKE) --foreign src/Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
 	  *config.status*) \
@@ -427,6 +433,10 @@ uvaia_search_u$(EXEEXT): $(uvaia_search_u_OBJECTS) $(uvaia_search_u_DEPENDENCIES
 	@rm -f uvaia_search_u$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(uvaia_search_u_OBJECTS) $(uvaia_search_u_LDADD) $(LIBS)
 
+uvaiaclust$(EXEEXT): $(uvaiaclust_OBJECTS) $(uvaiaclust_DEPENDENCIES) $(EXTRA_uvaiaclust_DEPENDENCIES) 
+	@rm -f uvaiaclust$(EXEEXT)
+	$(AM_V_CCLD)$(LINK) $(uvaiaclust_OBJECTS) $(uvaiaclust_LDADD) $(LIBS)
+
 uvaialign$(EXEEXT): $(uvaialign_OBJECTS) $(uvaialign_DEPENDENCIES) $(EXTRA_uvaialign_DEPENDENCIES) 
 	@rm -f uvaialign$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(uvaialign_OBJECTS) $(uvaialign_LDADD) $(LIBS)
@@ -438,6 +448,8 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/align.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cluster.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fastaseq.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/search_u.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/utils.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/uvaia.Po@am__quote@
