working uvaia_ball (ball radius neighbours)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,7 +4,7 @@ AM_CPPFLAGS = $(GTKDEPS_CFLAGS) -I$(top_srcdir)/submodules/WFA -I$(top_srcdir)/@
 AM_CFLAGS = @AM_CFLAGS@ @OPENMP_CFLAGS@ @ZLIB_CFLAGS@ @LZMA_CFLAGS@
 LDADD = $(top_builddir)/submodules/WFA/libwfa.la $(top_builddir)/@BIOMCMCLIB@/lib/libbiomcmc_static.la $(GTKDEPS_LIBS) @ZLIB_LIBS@ @LZMA_LIBS@ $(AM_LDFLAGS)
 
-bin_PROGRAMS = uvaialign uvaia_search_u uvaia uvaiaclust
+bin_PROGRAMS = uvaialign uvaia_search_u uvaia uvaiaclust uvaiaball
 uvaialign_SOURCES = align.c kseq.h
 uvaialign_LDADD = $(LDADD)
 
@@ -16,3 +16,6 @@ uvaia_LDADD = $(LDADD)
 
 uvaiaclust_SOURCES = cluster.c utils.c utils.h fastaseq.h fastaseq.c
 uvaiaclust_LDADD = $(LDADD)
+
+uvaiaball_SOURCES = ball.c utils.c utils.h fastaseq.h fastaseq.c
+uvaiaball_LDADD = $(LDADD)
